# agentic-srecopilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/app/: config.py  ingest.py  main.py
backend/app/api/: incidents.py
backend/app/core/: approval.py  cost.py  embeddings.py  llm_client.py  observability.py  pgvector_store.py
backend/app/graph/: build.py  state.py
deploy/: nginx.conf
evals/: baseline.json  run_offline.py  scorecard.md
evals/scenarios/: demoapp_down.yaml  demoapp_down_alt.yaml  healthy_control.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
infra/: postgres-init.sql
mcp_servers/common/: approval.py  ssh.py
mcp_servers/fleet_readonly/: server.py
mcp_servers/fleet_write/: server.py
mcp_servers/runbooks/: server.py
tests/: test_graph_fixtures.py  test_units.py
