[project]
name = "agentic-srecopilot"
version = "0.1.0"
description = "Agentic Cloud-Ops / SRE copilot: multi-agent incident diagnosis and remediation with evals"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.137.2",
    "fastmcp>=3.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
