[project]
name = "agentic-srecopilot"
version = "0.1.0"
description = "Agentic Cloud-Ops / SRE copilot: multi-agent incident diagnosis and remediation with evals"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.137.2",
    "fastmcp>=3.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "openinference-instrumentation-langchain>=0.1.66",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
